# RASSM

./: LICENSE  README.md  rassm_artifact_gen.ipynb
code/: CMakeLists.txt
code/aspt/: SpMM_ASpT_DP.cc
code/include/: BitSet.h  Reader.h  Residue.h  combination.h  common.h  config.h  experiments.h  global.h
code/include/matrices/: ATM.h  CSC.h  CSF.h  CSR.h  DCSC.h  Matrix.h
code/include/sddmm/: simple.h  tiled.h
code/include/spmm/: jstream.h  kstream.h  simple.h  taco.h
code/include/utils/: Statistics.h  util.h
code/jstream/: model.cc  model.h
code/src/: common.cpp  global.cpp  main.cpp  util.cpp
scripts/: download_large_40M.sh  extract_stats.sh  run-all.sh  run-aspt.sh  run-csf-uo.sh  run-csf-us.sh  run-csr.sh  run-jstream.sh  run-rassm.sh
